--- a/Credit Card Fraud Detection (Jupyter Notebook).ipynb
+++ b/Credit Card Fraud Detection (Jupyter Notebook).ipynb
@@ -1,25 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Credit Card Fraud Detection\n",
-
-    "\n",
-    "Throughout the financial sector, machine learning algorithms are being developed to detect fraudulent transactions.  In this project, that is exactly what we are going to be doing as well.  Using a dataset of of nearly 28,500 credit card transactions and multiple unsupervised anomaly detection algorithms, we are going to identify transactions with a high probability of being credit card fraud.  In this project, we will build and deploy the following two machine learning algorithms:\n",
-    "\n",
-    "* Local Outlier Factor (LOF)\n",
-    "* Isolation Forest Algorithm\n",
-    "\n",
-    "Furthermore, using metrics suchs as precision, recall, and F1-scores, we will investigate why the classification accuracy for these algorithms can be misleading.\n",
-    "\n",
-    "In addition, we will explore the use of data visualization techniques common in data science, such as parameter histograms and correlation matrices, to gain a better understanding of the underlying distribution of data in our data set. Let's get started!\n",
-    "\n",
-    "## 1. Importing Necessary Libraries\n",
-    "\n",
-    "To start, let's print out the version numbers of all the libraries we will be using in this project. This serves two purposes - it ensures we have installed the libraries correctly and ensures that this tutorial will be reproducible. "
-   ]
+ "cells": [   ]
   },
   {
    "cell_type": "code",
@@ -68,15 +48,7 @@
     "import seaborn as sns"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. The Data Set\n",
-    "\n",
-    "In the following cells, we will import our dataset from a .csv file as a Pandas DataFrame.  Furthermore, we will begin exploring the dataset to gain an understanding of the type, quantity, and distribution of data in our dataset.  For this purpose, we will use Pandas' built-in describe feature, as well as parameter histograms and a correlation matrix. "
-   ]
-  },
+  {  },
   {
    "cell_type": "code",
    "execution_count": 3,
@@ -292,35 +264,7 @@
     "print(Y.shape)"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Unsupervised Outlier Detection\n",
-    "\n",
-    "Now that we have processed our data, we can begin deploying our machine learning algorithms.  We will use the following techniques: \n",
-    "\n",
-    "**Local Outlier Factor (LOF)**\n",
-    "\n",
-    "The anomaly score of each sample is called Local Outlier Factor. It measures the local deviation of density of a \n",
-    "given sample with respect to its neighbors. It is local in that the anomaly score depends on how isolated the \n",
-    "object is with respect to the surrounding neighborhood.\n",
-    "\n",
-    "\n",
-    "**Isolation Forest Algorithm**\n",
-    "\n",
-    "The IsolationForest ‘isolates’ observations by randomly selecting a feature and then randomly selecting \n",
-    "a split value between the maximum and minimum values of the selected feature.\n",
-    "\n",
-    "Since recursive partitioning can be represented by a tree structure, the number of splittings required to \n",
-    "isolate a sample is equivalent to the path length from the root node to the terminating node.\n",
-    "\n",
-    "This path length, averaged over a forest of such random trees, is a measure of normality and our decision function.\n",
-    "\n",
-    "Random partitioning produces noticeably shorter paths for anomalies. Hence, when a forest of random trees \n",
-    "collectively produce shorter path lengths for particular samples, they are highly likely to be anomalies."
-   ]
-  },
+  {  },
   {
    "cell_type": "code",
    "execution_count": 11,
